<resources>
    <string name="app_name">NoQApp</string>LaunchActivity
    <string name="title_activity_launch">NoQApp</string>
    <string name="btnBarcodeScanner">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="bussinessName">Bussiness Name</string>-->
    <string-array name="title_main_viewpager_tab">
        <item>Scan Queue</item>
        <item>Queue List</item>
        <item>Me</item>
    </string-array>
    <string name="title_activity_queue_list">QueueListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="join">JOIN</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan QR-Code</string>
    <string name="title_activity_join_queue">JoinQueueActivity</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="autojoinon">Auto Join On Scan</string>
    <string name="remotescanavail">Remote Scan Available</string>
    <string name="invite">Invite</string>
    <string name="firstname">First Name</string>

  <string name="ACCOUNT_KIT_CLIENT_TOKEN">ec365faae446a61474e707beaa4e0131</string>
    <string name="FACEBOOK_APP_ID">982366595228298</string>




        <!--Invite Screen-->
    <string name="how_it_works">how it works</string>
    <string name="your_invite_code">Your Invite Code</string>
    <string name="copy">Copy</string>
    <string name="send_invite">Send Invites-></string>

    <string name="offline">Network unavailable. Please connect your device to network.</string>
    <string name="empty_history">You don\'t have any \n recent history.</string>
    <string name="close">close</string>



    <!--Register Screen-->

    <string name="phonenumber">Phone Number</string>
    <string name="freeremotescan">Get Free Remote Scan</string>
    <string name="register">Register</string>
    <string name="phone">Phone*</string>
    <string name="name">Name*</string>
    <string name="mail">Mail</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender*</string>
    <string name="invitecode">Invite code</string>
    <string name="btnregister">Continue Register</string>
</resources>
