<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

    <include layout="@layout/toolbar_layout"/>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@mipmap/invite_bg"
    android:layout_height="wrap_content">


    <com.noqapp.client.views.cutomviews.TextViewRalewayRegular
        android:id="@+id/tv_title"
        style="@style/style_invite_tv"
        android:textColor="@color/colorActionbar"
        android:textSize="24sp"
        />

    <com.noqapp.client.views.cutomviews.TextViewRobotoLight
        android:id="@+id/tv_details"
        android:textColor="@color/colorAddress"
        android:textSize="15sp"
        style="@style/style_invite_tv"
         />

    <com.noqapp.client.views.cutomviews.TextViewRalewayRegular
        android:id="@+id/tv_how_it_works"
        style="@style/style_invite_tv"
        android:textColor="@color/colorActionbar"
        android:textSize="15sp"
        android:text="@string/how_it_works" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/invite" />

    <TextView
        style="@style/style_invite_tv"
        android:textColor="@color/color_total_val"
        android:textSize="20sp"
        android:text="@string/your_invite_code" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/square_white_bg_drawable"
        >
        <com.noqapp.client.views.cutomviews.TextViewRalewayRegular
            android:id="@+id/tv_invite_code"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <com.noqapp.client.views.cutomviews.TextViewRobotoLight
            android:id="@+id/tv_copy"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorActionbar"
            android:textSize="15sp"
            android:text="@string/copy" />
    </RelativeLayout>


    <com.noqapp.client.views.cutomviews.CustomButton
        android:id="@+id/btn_send_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@mipmap/send_invite"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/send_invite" />
</LinearLayout>

</LinearLayout>